hphp/hack/test/sound_dynamic/typing/infinite_loop_typeconst_upper_bound.bad.php.exp
File "infinite_loop_typeconst_upper_bound.bad.php", line 14, characters 31-37:
Unbound name: `NoExist` (Naming[2049])
